Fix spacings footer

--- a/assets/_sass/_main-footer.scss
+++ b/assets/_sass/_main-footer.scss
@@ -12,6 +12,10 @@
 		font-size: 1em;
 		margin-top: 0;
 		margin-bottom: .75em;
+
+		@include media(small) {
+			margin-top: 1rem;
+		}
 	}
 
 	&__copyright {
